--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^13.5.0",
     "ajv": "^8.17.1",
     "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
     "firebase": "^10.13.2",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
