--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@microsoft/signalr": "^8.0.7",
     "@mui/icons-material": "^6.0.2",
     "@mui/material": "^6.1.1",
     "@mui/styles": "^6.1.1",
