--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@emotion/styled": "^11.13.0",
     "@microsoft/signalr": "^8.0.7",
     "@mui/icons-material": "^6.0.2",
-    "@mui/material": "^6.1.1",
+    "@mui/material": "^6.1.3",
     "@mui/styles": "^6.1.1",
     "@mui/utils": "^6.1.1",
     "@react-oauth/google": "^0.12.1",
@@ -22,6 +22,7 @@
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
