--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lucide-react": "^0.453.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-intersection-observer": "^9.13.1",
     "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
