--- a/package.json
+++ b/package.json
@@ -25,9 +25,14 @@
     "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.13.1",
     "react-material-ui-carousel": "^3.4.2",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
+    "redux": "^5.0.1",
+    "redux-saga": "^1.3.0",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
