--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mui/styles": "^6.1.1",
     "@mui/utils": "^6.1.1",
     "@react-oauth/google": "^0.12.1",
+    "@reduxjs/toolkit": "^2.3.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -31,6 +32,7 @@
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
     "redux": "^5.0.1",
+    "redux-logger": "^3.0.6",
     "redux-saga": "^1.3.0",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
