--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-toastify": "^10.0.5",
     "redux": "^5.0.1",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "redux-saga": "^1.3.0",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
